lab1/Test/L1-A-6-36.output
Error Type B at Line 1
Error Type A at Line 8
Error Type A at Line 9
Error Type A at Line 9
Error Type A at Line 9
