lab1/Test/L1-A-6-36.cmm
int U_zRxJk41eyyQs [ ] , v [ 2119266361 ] [ 2002799003 
  ] [ 772256666 ] [ 972322274 ] [ 1321443050 ] [ 456040527 
  ] , mKiK 


;
int cD10cH3omlC6 [ 8380365 ] 
;:
\^: